Fix error content not overflowing.

--- a/assets/sass/components/global/_googlesitekit-error-handler.scss
+++ b/assets/sass/components/global/_googlesitekit-error-handler.scss
@@ -20,6 +20,10 @@
 
 	.googlesitekit-error-handler {
 
+		.googlesitekit-banner__content {
+			overflow: auto;
+		}
+
 		.mdc-button {
 			@include mdc-button-filled-accessible($c-utility-error);
 		}
